# valorant-offset-dumper

./: CMakeLists.txt  README.md  build.bat
src/: main.cpp  pattern_scanner.cpp  pattern_scanner.hpp  signatures.hpp
